fin listar eventos y eventos por formacion